# RoboArm

./: .setup_assistant  CMakeLists.txt  README.md  package.xml
config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  robo_arm.ros2_control.xacro  robo_arm.urdf.xacro  robo_arm_config.srdf  robot_control.yaml  ros2_controllers.yaml
launch/: demo.launch.py  gazebo.launch.py  move_effector.launch.py  move_group.launch.py  moveit_rviz.launch.py  robot_controller.launch  rsp.launch.py  rsp_my.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
meshes/: End_Effector.STL  Link_1.STL  Link_2.STL  Link_3.STL  Link_4.STL  base_link.STL
rviz/: rviz_moveit.rviz  start_file.rviz
src/: hello_moveit.cpp
urdf/: gazebo_control.xacro  robot_assembly(gazebo).urdf  robot_assembly(gazebo).xacro  robot_assembly(moveit) copy.urdf  robot_assembly(moveit).urdf  robot_assembly.csv  robot_assembly.gv  robot_assembly.urdf  robot_core.xacro
worlds/simple_room/: model.sdf
worlds/simple_room/simple_room/: model.sdf
